--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,15 @@
 repos:
--   repo: git@github.com:Yelp/detect-secrets
+-   repo: https://github.com/Yelp/detect-secrets.git
     rev: v0.14.3
     hooks:
     -   id: detect-secrets
         exclude: .*/tests/.*
+-   repo: local
+    hooks:
+    -   id: talisman-precommit
+        name: talisman
+        entry: bash -c 'if [ -n "${TALISMAN_HOME:-}" ]; then ${TALISMAN_HOME}/talisman_hook_script pre-commit; else echo "TALISMAN does not exist. Consider installing from https://github.com/thoughtworks/talisman . If you already have talisman installed, please ensure TALISMAN_HOME variable is set to where talisman_hook_script resides, for example, TALISMAN_HOME=${HOME}/.talisman/bin"; fi'
+        language: system
+        pass_filenames: false
+        types: [text]
+        verbose: true
